# UWE-James-Jam-2025

./: CMakeLists.txt  README.md
Data/Dialogue/: dialogue.txt  dialogue_player.txt
Data/Images/: menu_1.png-autosave.kra  menu_1.png~  menu_2.png-autosave.kra  menu_2.png~
Data/Sounds/: init_sounds.txt
src/: Enums.h  Game.cpp  Game.h  Structs.h  ThreadPool.cpp  ThreadPool.h  main.cpp
src/audio/: Audio.cpp  Audio.h  Sound.cpp  Sound.h
src/mech/: TypeCheck.cpp  TypeCheck.h  gauge.cpp  gauge.h
src/states/: Menu.cpp  Menu.h
